# reviewerloop

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
examples/: demo_instructions.md  demo_reviewer.py  demo_writer.py  make_demo_project.py
src/reviewerloop/: __init__.py  cli.py
tests/: test_cli.py
