[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewerloop"
version = "0.0.1"
description = "Automate a reviewer/writer/test feedback loop over a codebase."
readme = "README.md"
authors = [
    {name = "MatteoLacki", email = "matteo.lacki@gmail.com"},
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
reviewerloop = "reviewerloop.cli:main"

[project.urls]
homepage = "https://github.com/MatteoLacki/reviewerloop.git"
repository = "https://github.com/MatteoLacki/reviewerloop.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
